Update frontend configuration and dependencies
- Update next.config.js with API proxy configuration for development
- Update package.json with new dependencies:
  - Remove next-auth dependency
  - Add js-cookie for token storage
  - Add date-fns for date formatting
  - Add xlsx for Excel export functionality
- Update tsconfig.json with path aliases for cleaner imports
- Add eslint.config.mjs with flat config format
- Update .env.example with JWT configuration variables

--- a/.env.example
+++ b/.env.example
@@ -23,28 +23,33 @@ REDIS_URL=redis://localhost:6379
 #   python -c "import secrets; print(secrets.token_urlsafe(32))"
 ENCRYPTION_KEY=
 
+# Legacy encryption keys for key rotation (comma-separated, oldest to newest)
+# When rotating keys: move current ENCRYPTION_KEY to this list, generate new ENCRYPTION_KEY
+# Example: ENCRYPTION_KEY_LEGACY=old_key_1,old_key_2
+# ENCRYPTION_KEY_LEGACY=
+
 # Generate JWT secret (minimum 32 characters):
 #   python -c "import secrets; print(secrets.token_urlsafe(32))"
 JWT_SECRET=
 
-# =============================================================================
-# GOOGLE OAUTH - REQUIRED
-# =============================================================================
-# Get from Google Cloud Console:
-#   https://console.cloud.google.com/apis/credentials
-# Create OAuth 2.0 Client ID (Web application type)
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+# JWT token expiration (hours) - short-lived for security
+JWT_EXPIRATION_HOURS=1
+
+# JWT token claims for validation
+JWT_ISSUER=licence-api
+JWT_AUDIENCE=licence-app
+
+# Refresh token validity (days)
+REFRESH_TOKEN_DAYS=30
 
 # =============================================================================
-# NEXTAUTH.JS - REQUIRED
+# PASSWORD POLICY
 # =============================================================================
-# Base URL for your frontend (change for production)
-NEXTAUTH_URL=http://localhost:3000
+PASSWORD_MIN_LENGTH=12
+PASSWORD_HISTORY_COUNT=5
+MAX_LOGIN_ATTEMPTS=5
+LOCKOUT_DURATION_MINUTES=30
 
-# Generate NextAuth secret:
-#   openssl rand -base64 32
-NEXTAUTH_SECRET=
 
 # =============================================================================
 # FRONTEND API
@@ -61,4 +66,22 @@ NEXT_PUBLIC_API_URL=http://localhost:8000
 # CORS_ORIGINS=http://localhost:3000
 
 # Environment: development, staging, production
-# ENVIRONMENT=development
+ENVIRONMENT=development
+
+# Debug mode (enables API docs, verbose logging)
+DEBUG=false
+
+# =============================================================================
+# RATE LIMITING & PROXY
+# =============================================================================
+# Trusted proxy IP addresses/ranges for X-Forwarded-For header (comma-separated)
+# Only these IPs are trusted to set forwarded headers
+# Examples: 10.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16, 127.0.0.1
+# TRUSTED_PROXIES=10.0.0.0/8,172.16.0.0/12
+
+# =============================================================================
+# SESSION COOKIES
+# =============================================================================
+SESSION_COOKIE_SECURE=true
+SESSION_COOKIE_HTTPONLY=true
+SESSION_COOKIE_SAMESITE=lax
