Move hardcoded configuration values to environment variables
Refactor configuration to eliminate hardcoded values throughout the
codebase, making all operational parameters configurable via
environment variables.

config.py additions:
- CORS settings: cors_origins for configurable allowed origins
- Trusted proxies: trusted_proxies for secure rate limiting behind
  reverse proxies
- Rate limiting: Individual limits for authentication endpoints
  (login, refresh, password change, logout), admin operations (user
  creation, role modification), provider testing, and sensitive
  operations
- Cache TTLs: Configurable time-to-live values for dashboard,
  departments, providers, provider stats, license stats, payment
  methods, and settings caches
- Audit settings: audit_retention_days for log retention policy
- Property helpers: cors_origins_list and trusted_proxies_list for
  convenient access to parsed values

rate_limit.py updates:
- Remove os.environ usage in favor of Settings class
- Load all rate limit values from configuration
- Use settings.trusted_proxies_list for proxy detection
- Initialize rate limit constants from _get_rate_limit_settings()
- Maintain backwards compatibility with existing constant names

.env.example updates:
- Document all new CORS settings
- Add comprehensive rate limiting configuration section
- Add cache TTL configuration section with default values
- Add audit retention configuration
- Include helpful comments explaining each setting

This change enables operators to tune application behavior without
code changes, supporting different configurations for development,
staging, and production environments.

--- a/.env.example
+++ b/.env.example
@@ -72,12 +72,46 @@ ENVIRONMENT=development
 DEBUG=false
 
 # =============================================================================
+# CORS SETTINGS
+# =============================================================================
+# Allowed origins for CORS (comma-separated for multiple)
+CORS_ORIGINS=http://localhost:3000
+
+# =============================================================================
 # RATE LIMITING & PROXY
 # =============================================================================
 # Trusted proxy IP addresses/ranges for X-Forwarded-For header (comma-separated)
 # Only these IPs are trusted to set forwarded headers
 # Examples: 10.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16, 127.0.0.1
 # TRUSTED_PROXIES=10.0.0.0/8,172.16.0.0/12
+
+# Rate limits (requests per minute)
+RATE_LIMIT_DEFAULT=100
+RATE_LIMIT_AUTH_LOGIN=5
+RATE_LIMIT_AUTH_REFRESH=10
+RATE_LIMIT_AUTH_PASSWORD_CHANGE=3
+RATE_LIMIT_AUTH_LOGOUT=10
+RATE_LIMIT_ADMIN_USER_CREATE=10
+RATE_LIMIT_ADMIN_ROLE_MODIFY=20
+RATE_LIMIT_PROVIDER_TEST=10
+RATE_LIMIT_SENSITIVE=5
+
+# =============================================================================
+# CACHE SETTINGS (TTL in seconds)
+# =============================================================================
+CACHE_TTL_DASHBOARD=300
+CACHE_TTL_DEPARTMENTS=3600
+CACHE_TTL_PROVIDERS=300
+CACHE_TTL_PROVIDER_STATS=300
+CACHE_TTL_LICENSE_STATS=300
+CACHE_TTL_PAYMENT_METHODS=1800
+CACHE_TTL_SETTINGS=3600
+
+# =============================================================================
+# AUDIT SETTINGS
+# =============================================================================
+# Number of days to retain audit logs
+AUDIT_RETENTION_DAYS=365
 
 # =============================================================================
 # SESSION COOKIES
