--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "python-multipart>=0.0.6",
     "bcrypt>=4.0.0",
     "slowapi>=0.1.9",
+    "openpyxl>=3.1.0",
 ]
 
 [project.optional-dependencies]
