--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.469.0",
     "next": "^16.1.6",
+    "next-intl": "^4.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.0",
