Add security audit files to gitignore
Exclude security audit documentation files from version control
to prevent committing sensitive security analysis information.

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,10 @@ token.json
 tokens.json
 oauth_tokens.*
 
+# Security audit files
+.sec-ana
+*.sec-ana
+
 # ============================================================================
 # BACKEND - PYTHON
 # ============================================================================
