--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "lucide-react": "^0.469.0",
     "next": "^16.1.6",
     "next-intl": "^4.8.1",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.0",
