--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.0",
+    "@swc/helpers": "^0.5.18",
     "@tanstack/react-query": "^5.62.0",
     "axios": "^1.7.0",
     "class-variance-authority": "^0.7.1",
