fix: add missing backup components to repository
- Update .gitignore to not exclude frontend/src/components/backup/
- Add BackupExportDialog and BackupRestoreDialog components

--- a/.gitignore
+++ b/.gitignore
@@ -396,6 +396,8 @@ sessions/
 # Backup files
 *.backup
 *_backup
-backup/
-backups/
+/backup/
+/backups/
+# But include frontend components
+!frontend/src/components/backup/
 
