Optimize frontend Docker build performance
- Build only for linux/amd64 instead of multi-platform
- Add npm cache mount for faster dependency installation
- Add Next.js build cache mount for faster rebuilds

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,7 +5,8 @@ FROM base AS deps
 WORKDIR /app
 
 COPY package.json package-lock.json* ./
-RUN npm ci
+RUN --mount=type=cache,target=/root/.npm \
+    npm ci
 
 # Rebuild the source code only when needed
 FROM base AS builder
@@ -15,7 +16,8 @@ COPY . .
 
 ENV NEXT_TELEMETRY_DISABLED=1
 
-RUN npm run build
+RUN --mount=type=cache,target=/app/.next/cache \
+    npm run build
 
 # Production image
 FROM base AS runner
