--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -107,7 +107,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           build-args: |
             NEXT_PUBLIC_API_URL=/api
 
