--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "bcrypt>=4.0.0",
     "slowapi>=0.1.9",
     "openpyxl>=3.1.0",
+    "qrcode[pil]>=7.4.0",
 ]
 
 [project.optional-dependencies]
