--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -51,6 +51,10 @@ line-length = 100
 [tool.ruff.lint]
 select = ["E", "F", "I", "N", "W", "UP"]
 
+[tool.ruff.lint.per-file-ignores]
+# HTML email templates have long inline-style lines
+"src/licence_api/services/email_service.py" = ["E501"]
+
 [tool.mypy]
 python_version = "3.12"
 strict = true
