--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "slowapi>=0.1.9",
     "openpyxl>=3.1.0",
     "qrcode[pil]>=7.4.0",
+    "chardet>=5.2.0",
 ]
 
 [project.optional-dependencies]
