Fix data directory path for Docker deployments
- Use DATA_DIR environment variable when set (Docker)
- Fall back to relative path for local development
- Set DATA_DIR=/app/data in Dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -27,6 +27,9 @@ RUN useradd --create-home --shell /bin/bash app
 # Create data directory base (will be mounted as volume)
 RUN mkdir -p /app/data && chown app:app /app/data
 
+# Set data directory for the application
+ENV DATA_DIR=/app/data
+
 USER app
 
 EXPOSE 8000
