Add scheduled backup system with architecture and security improvements
Backend:
- Add scheduled backup feature with automatic retention management
- Add backup permissions (view, create, delete, restore, configure)
- Add PermissionSyncService to auto-assign permissions to system roles
- Fix MVC violation: move credential filtering to ProviderService
- Fix MVC violation: move logo file serving logic to ProviderService
- Fix N+1 query in AdminAccountService with batch loading
- Add superadmin bypass to all permission check methods (RBAC)
- Add backup volume mount for Docker deployments

Frontend:
- Add BackupsTab component with scheduling, retention, and backup list
- Add alert-dialog UI component for confirmation dialogs
- Add backup API methods to centralized client
- Add translations for backup feature (de/en)

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -107,6 +107,7 @@ services:
       CORS_ORIGINS: ${CORS_ORIGINS:-*}
     volumes:
       - backend_data:/app/data
+      - ${BACKUP_PATH:-./backups}:/app/data/backups
     networks:
       - backend_network
       - frontend_network
