--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "openpyxl>=3.1.0",
     "qrcode[pil]>=7.4.0",
     "chardet>=5.2.0",
+    "croniter>=2.0.0",
 ]
 
 [project.optional-dependencies]
