--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "qrcode[pil]>=7.4.0",
     "chardet>=5.2.0",
     "croniter>=2.0.0",
+    "authlib>=1.3.0",
 ]
 
 [project.optional-dependencies]
