--- a/.env.example
+++ b/.env.example
@@ -119,3 +119,18 @@ AUDIT_RETENTION_DAYS=365
 SESSION_COOKIE_SECURE=true
 SESSION_COOKIE_HTTPONLY=true
 SESSION_COOKIE_SAMESITE=lax
+
+# =============================================================================
+# GOOGLE OAUTH (OPTIONAL)
+# =============================================================================
+# Enable "Sign in with Google" for users with existing accounts
+# Set up at: https://console.cloud.google.com/apis/credentials
+#
+# 1. Create OAuth 2.0 Client ID (Web application)
+# 2. Add authorized redirect URI: https://your-domain.com/api/v1/auth/google/callback
+# 3. Copy Client ID and Client Secret below
+#
+# Leave empty to disable Google OAuth
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=
