--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "chardet>=5.2.0",
     "croniter>=2.0.0",
     "authlib>=1.3.0",
+    "itsdangerous>=2.1.0",
 ]
 
 [project.optional-dependencies]
