Migrate to Google OAuth only authentication
- Remove password-based login and all TOTP/2FA functionality
- Add SUPERADMIN_EMAIL environment variable for zero-config first user setup
- Auto-create and auto-promote superadmin on first Google OAuth login
- Update Google profile picture on each login
- Remove password policy settings from UI
- Clean up unused translations (password, TOTP related)
- Add database migration to remove password/TOTP columns
- Delete create_superadmin.py script (no longer needed)

BREAKING: Users must now authenticate via Google OAuth only.
Configure GOOGLE_CLIENT_ID, GOOGLE_CLIENT_SECRET, GOOGLE_REDIRECT_URI
and SUPERADMIN_EMAIL in environment.

--- a/.env.prod.example
+++ b/.env.prod.example
@@ -46,3 +46,17 @@ REDIS_PASSWORD=CHANGE_ME_STRONG_PASSWORD
 ENCRYPTION_KEY=CHANGE_ME_32_BYTE_KEY
 JWT_SECRET=CHANGE_ME_JWT_SECRET
 NEXTAUTH_SECRET=CHANGE_ME_NEXTAUTH_SECRET
+
+# =============================================================================
+# GOOGLE OAUTH (REQUIRED)
+# =============================================================================
+# Set up at: https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=https://licence.example.com/api/v1/auth/google/callback
+
+# =============================================================================
+# SUPERADMIN
+# =============================================================================
+# Email address of the superadmin - auto-created on first login
+SUPERADMIN_EMAIL=admin@example.com
