--- a/.env.example
+++ b/.env.example
@@ -43,15 +43,6 @@ JWT_AUDIENCE=licence-app
 REFRESH_TOKEN_DAYS=30
 
 # =============================================================================
-# PASSWORD POLICY
-# =============================================================================
-PASSWORD_MIN_LENGTH=12
-PASSWORD_HISTORY_COUNT=5
-MAX_LOGIN_ATTEMPTS=5
-LOCKOUT_DURATION_MINUTES=30
-
-
-# =============================================================================
 # FRONTEND API
 # =============================================================================
 NEXT_PUBLIC_API_URL=http://localhost:8000
@@ -121,16 +112,21 @@ SESSION_COOKIE_HTTPONLY=true
 SESSION_COOKIE_SAMESITE=lax
 
 # =============================================================================
-# GOOGLE OAUTH (OPTIONAL)
+# GOOGLE OAUTH (REQUIRED)
 # =============================================================================
-# Enable "Sign in with Google" for users with existing accounts
+# Authentication via Google OAuth only
 # Set up at: https://console.cloud.google.com/apis/credentials
 #
 # 1. Create OAuth 2.0 Client ID (Web application)
 # 2. Add authorized redirect URI: https://your-domain.com/api/v1/auth/google/callback
 # 3. Copy Client ID and Client Secret below
-#
-# Leave empty to disable Google OAuth
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI=
+
+# =============================================================================
+# SUPERADMIN (REQUIRED FOR FIRST SETUP)
+# =============================================================================
+# Email address of the superadmin - this user is auto-created on first login
+# and always has full superadmin privileges. Use for initial system setup.
+SUPERADMIN_EMAIL=
